[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/title/title.gd" type="Script" id=1]
[ext_resource path="res://resources/main_theme.tres" type="Theme" id=2]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Jam" type="Label" parent="VBoxContainer"]
margin_top = 224.0
margin_right = 1024.0
margin_bottom = 238.0
text = "GoGodot Jam 4"
align = 1

[node name="Name" type="Label" parent="VBoxContainer"]
margin_top = 242.0
margin_right = 1024.0
margin_bottom = 256.0
text = "Declutter (Working Title)"
align = 1

[node name="Start" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 260.0
margin_right = 532.0
margin_bottom = 280.0
size_flags_horizontal = 4
text = "Start"

[node name="Load" type="Button" parent="VBoxContainer"]
margin_left = 491.0
margin_top = 284.0
margin_right = 533.0
margin_bottom = 304.0
size_flags_horizontal = 4
text = "Load"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_left = 480.0
margin_top = 308.0
margin_right = 543.0
margin_bottom = 328.0
size_flags_horizontal = 4
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_left = 483.0
margin_top = 332.0
margin_right = 540.0
margin_bottom = 352.0
size_flags_horizontal = 4
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_left = 492.0
margin_top = 356.0
margin_right = 532.0
margin_bottom = 376.0
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
